whoami/005-ingress-route-https.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: whoami
  namespace: default
  annotations: # If you are using local certs and not lets Encrypt - Remove this
    kubernetes.io/ingress.class: traefik # If you are using local certs and not lets Encrypt - Remove this
    cert-manager.io/cluster-issuer: letsencrypt-staging # If you are using local certs and not lets Encrypt - Remove this
spec:
  entryPoints:
    - websecure
  tls:
    secretName: whoami.aks.ez-lab.xyz-tls # Lets Encrypt Generated Cert from 004-lets-encrypt-cert.yaml - Change this to local cert if you don't want to use Lets Encrypt.
    domains:
      - main: whoami.aks.ez-lab.xyz
        sans:
          - whoami.aks.ez-lab.xyz
  routes:
    - match: Host(`whoami.aks.ez-lab.xyz`)
      kind: Rule
      services:
        - name: whoami
          port: 80
